# src/models/member-profile-enums.ts
@@ -1,0 +1,51 @@
+export enum Gender {
+  Male = 0,
+  Female = 1,
+  Other = 2,
+  PreferNotToSay = 3
+}
+
+export enum KartExperienceYears {
+  Never = 0,
+  LessThanOneYear = 1,
+  OneToTwoYears = 2,
+  ThreeToFiveYears = 3,
+  MoreThanFiveYears = 4
+}
+
+export enum RaceFrequency {
+  Rarely = 0,
+  Regularly = 1,
+  Weekly = 2,
+  Daily = 3
+}
+
+export enum ChampionshipParticipation {
+  Never = 0,
+  LocalRegional = 1,
+  State = 2,
+  National = 3
+}
+
+export enum CompetitiveLevel {
+  Beginner = 0,
+  Intermediate = 1,
+  Competitive = 2,
+  Professional = 3
+}
+
+export enum AttendsEvents {
+  Yes = 0,
+  No = 1,
+  DependsOnDistance = 2
+}
+
+export enum InterestCategory {
+  LightRentalKart = 0,
+  HeavyRentalKart = 1,
+  TwoStrokeKart = 2,
+  Endurance = 3,
+  Teams = 4,
+  LongChampionships = 5,
+  SingleRaces = 6
+} 
